style.css
html, body {
    background: rgba(246, 246, 246, 0.5);
    color: #222222;
    font-family: Helvetica Neue, Helvetica, sans-serif;
    font-size: 16px;
    /* height: 100%; */
    letter-spacing: 0;
    line-height: 24px;
    margin: 0;
    padding: 0;
}
  
a {
    display: flex;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

/* H E A D E R S  &  L A B E L S */

.h1 {
    color: #000000;
    font-size: 24px;
    font-weight: bold;
    letter-spacing: 0.005em;
    line-height: 40px;
    margin-bottom: 24px;
}

/* S P A C E R S */
.top-128 {
    margin-top: 128px;
}
.top-64 {
    margin-top: 64px;
}
.top-56 {
    margin-top: 56px;
}
.top-48 {
    margin-top: 48px;
}
.top-40 {
    margin-top: 40px;
}
.top-32 {
    margin-top: 32px;
}
.top-24 {
    margin-top: 24px;
}
.top-16 {
    margin-top: 16px;
}
.top-8 {
    margin-top: 8px;
}

.sides-16 {
    margin-left: 16px;
    margin-right: 16px;
}
.sides-8 {
    margin-left: 8px;
    margin-right: 8px;
}

.centered {
    display: flex;
    justify-content: center;
    width: 100%;
}

.break {
    flex-basis: 100%;
    height: 0;
  }
  
/* H E A D E R  &  N A V I G A T I O N */

.header {
    background: rgba(255, 255, 255, 0.92);
    backdrop-filter: blur(24px);
    -webkit-backdrop-filter: blur(24px);
    border: 1px solid #E6E6E6;
    display: flex;
    height: 56px;
    position: fixed;
    width: 100%;
    z-index: 999;
}

.nav {
    display: flex;
    margin: 0 auto;
}

.nav-btn-active, .nav-btn-inactive {
    border-radius: 2px;
    flex-wrap: wrap;
    font-weight: bold;
    margin: 4px;
    padding: 12px 0;
    text-align: center;
    width: 106px;
}

.nav-btn-active {
    background: rgba(230, 230, 230, 0.5);
    color: #222222;
    cursor: default;
}

.nav-btn-inactive {
    color: #404040;
}

.nav-btn-inactive:hover {
    background:rgba(5, 122, 255, 0.08);
    color: #057AFF;
}

/* C O N T E N T  C O N T A I N E R S */

.hero {
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    max-width: 648px;
    padding: 120px 16px 64px 16px;
}

.content-container {
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    max-width: 648px;
    padding: 0 16px;
}

.image-wide {
    margin: 64px auto;
    max-width: 996px;
    padding: 0 16px;
}

.card-note {
    background-color: #ffffff;
    border-radius: 6px;
    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
    color: #222222;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto;
    padding: 24px;
}
.card-note:hover {
    box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
}
.card-note > .primary-btn:hover {
    background: #f1f1f1;
    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
}

.card-prototype-container {
    display: flex;
    justify-content: space-between;
}
.card-prototype-columnns {
    width: 47%;
}
.card-prototype {
    flex-wrap: wrap;
    padding: 0 0 16px 0;
    width: 100%;
}
.prototype-cover {
    background-color: #c4c4c4;
    background-position: center;
    background-size: cover;
    border-radius: 6px 6px 0 0;
    height: 144px;
    width: 100%;
}

/* F A N C Y B O X */

.fancybox-caption {
    background: none !important;
}

/* T I M E L I N E */

.container-timeline {
    display: flex;
    margin-bottom: 8px;
    width: 100%;
}

.timeline-ruler {
    margin-right: 24px;
}
.ruler-badge {
    background-color: #c4c4c4;
    border-radius: 20px;
    height: 40px;
    width: 40px;
}
.ruler-border {
    background-color: #c4c4c4;
    border-radius: 1px;
    height: calc(100% - 48px);
    margin: 8px 19px 0 19px;
    width: 2px;
}

.timeline-work {
    width: 100%;
}
.work-header {
    display: flex;
    justify-content: space-between;
    padding: 8px 0;
}
.work-title {
    font-weight: bold;
}
.work-date {
    color: #404040;
    font-size: 12px;
    font-weight: bold;
    text-align: end;
}
.work-hero {
    background-color: #c4c4c4;
    background-position: center;
    background-size: cover;
    border-radius: 6px;
    flex: 0 1 584px;
    height: 200px;
    margin: 16px 0;
    width: 100%;
}
.work-subtitle-h1 {
    color: #404040;
    font-size: 12px;
    letter-spacing: 0px;
    line-height: 16px;
}
.work-subtitle-h2 {
    color: #404040;
    font-size: 10px;
    letter-spacing: 0px;
    line-height: 16px;
}

.work-thumbnails {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.thumbnails-img {
    border-radius: 6px;
    box-shadow: inset 0px 0px 0px 1.3px #ffffff;
    width: 100%;
    height: 100%;
}
.thumbnails-img:hover {
    box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
}
.img-link {
    /* flex: 1 0 242px; */
    max-width: 47%;
}
.thumbnails-concept {
    border-radius: 6px;
    box-shadow: inset 0px 0px 0px 1.3px #ffffff;
    width: 100%;
    height: 100%;
}
.thumbnails-concept:hover {
    box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
}
.concept-link {
    /* flex: 1 0 242px; */
    max-width: 31%;
}
.thumbnails-remesh {
    border-radius: 6px;
    box-shadow: inset 0px 0px 0px 1.3px #ffffff;
    margin-top: 24px;
    width: 100%;
    height: calc(100% -  24px);
}
.thumbnails-remesht:hover {
    box-shadow: inset 0px 0px 0px 1.3px #ffffff, 0px 1px 1px rgba(0, 0, 0, 0.12);
}
.remesh-link {
    /* flex: 1 0 242px; */
    max-width: 22%;
}


/* B U T T O N S */

.primary-btn {    
    background: #F6F6F6;
    box-shadow: inset 0px 0px 0px 1px #e6e6e6;
    border-radius: 20px;
    box-sizing: border-box;
    color: #404040;
    display: flex;
    font-size: 12px;
    font-weight: bold;
    justify-content: center;
    line-height: 16px;
    padding: 12px 32px;
}

.primary-btn:hover {
    box-shadow: inset 0px 0px 0px 1px #e6e6e6, 0px 1px 5px rgba(0, 0, 0, 0.12);
    color: #222222;
}

.big-btn {
    border-radius: 24px;
    color: #ffffff;
    flex-wrap: wrap;
    font-weight: bold;
    padding: 12px 0;
    text-align: center;
    width: 280px;
}
.spotify {
    background-color: #1DB954;
}
.spotify:hover {
    background-color: #1ED760;
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12);
}
.vimeo {
    background-color: #00ADEF;
}
.vimeo:hover {
    background-color: #0088CC;
    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.12);
}
  
/* I C O N S */

.icon-email {
    background-image: url(images/icons-email.svg);
}
.icon-linkedin {
    background-image: url(images/icons-linkedin.svg);
}
.icon-twitter {
    background-image: url(images/icons-twitter.svg);
}
.icon-document {
    background-image: url(images/icons-document.svg);
}

.icon {
    background-size: cover;
    display: flex;
    filter: invert(19%) sepia(0%) saturate(4219%) hue-rotate(81deg) brightness(110%) contrast(87%);
    height: 16px;
    margin-right: 8px;
    width: 16px;
  }

.primary-btn:hover .icon {
    filter: invert(10%) sepia(21%) saturate(4%) hue-rotate(18deg) brightness(105%) contrast(94%);
}

/* I M A G E S */

.avatar {
    border: 1px solid #E6E6E6;
    border-radius: 144px;
    margin: 0 auto;
    max-width: 216px;
}
  
/* M O B I L E */
@media (max-width: 648px) {
    .avatar {
        max-width: 104px;
    }
    .header {
        height: 48px;
    }
    .hero {
        padding: 80px 16px 64px 16px;
    }
    .mobile-stretch {
        flex: 1;
    }
    .card-prototype-container {
        flex-wrap: wrap;
    }
    .card-prototype-columnns {
        width: 100%;
    }
    .contact {
        flex: 0 0 200px;
        flex-wrap: wrap;
        height: 136px;
        align-content: space-between;
        margin: 40px auto 0 auto;
    }
    .big-btn {
        width: 184px;
    }
    .nav-btn-active, .nav-btn-inactive, .big-btn {
        font-size: 12px;
        line-height: 16px;
    }
    .primary-btn {
        width: 100%;
    }
}/* E N D   M O B I L E */

